syntax = "proto3";

package brisby;

// Message envelope wrapping all protocol messages
message Envelope {
    // Protocol version
    uint32 version = 1;
    // Request ID for correlation
    uint64 request_id = 2;
    // The actual message
    oneof payload {
        SearchRequest search_request = 10;
        SearchResponse search_response = 11;
        ChunkRequest chunk_request = 20;
        ChunkResponse chunk_response = 21;
        PublishRequest publish_request = 30;
        PublishResponse publish_response = 31;
        FindNodeRequest find_node_request = 40;
        FindNodeResponse find_node_response = 41;
        FindValueRequest find_value_request = 42;
        FindValueResponse find_value_response = 43;
        StoreRequest store_request = 44;
        StoreResponse store_response = 45;
        PingRequest ping_request = 46;
        PingResponse ping_response = 47;
        ErrorResponse error_response = 100;
    }
}

// Search messages

message SearchRequest {
    string query = 1;
    uint32 max_results = 2;
}

message SearchResponse {
    repeated SearchResult results = 1;
}

message SearchResult {
    bytes content_hash = 1;
    string filename = 2;
    uint64 size = 3;
    uint32 chunk_count = 4;
    float relevance = 5;
}

// Transfer messages

message ChunkRequest {
    bytes content_hash = 1;
    uint32 chunk_index = 2;
    bytes surb = 3; // Single-Use Reply Block
}

message ChunkResponse {
    bytes content_hash = 1;
    uint32 chunk_index = 2;
    bytes data = 3;
    bytes chunk_hash = 4;
}

// Publishing messages

message PublishRequest {
    bytes content_hash = 1;
    string filename = 2;
    repeated string keywords = 3;
    uint64 size = 4;
    uint32 chunk_count = 5;
    string nym_address = 6;
}

message PublishResponse {
    bool success = 1;
    string error = 2;
}

// DHT messages

message FindNodeRequest {
    bytes target_id = 1;
}

message FindNodeResponse {
    repeated NodeInfo nodes = 1;
}

message NodeInfo {
    bytes node_id = 1;
    string nym_address = 2;
}

message FindValueRequest {
    bytes key = 1;
}

message FindValueResponse {
    // Either returns seeders or closer nodes
    repeated Seeder seeders = 1;
    repeated NodeInfo nodes = 2;
}

message Seeder {
    string nym_address = 1;
    bytes chunk_bitmap = 2;
    uint64 last_seen = 3;
}

message StoreRequest {
    bytes key = 1;
    Seeder seeder = 2;
}

message StoreResponse {
    bool success = 1;
}

message PingRequest {
    bytes sender_id = 1;
}

message PingResponse {
    bytes responder_id = 1;
}

// Error message

message ErrorResponse {
    uint32 code = 1;
    string message = 2;
}

// Error codes
// 1xx - Protocol errors
// 100 - Version mismatch
// 101 - Invalid message
// 2xx - Resource errors
// 200 - Not found
// 201 - Unavailable
// 3xx - Validation errors
// 300 - Hash mismatch
// 301 - Invalid data
